Settled on profile pictures. Ran into an issue of displaying damage over our characters will try to troubleshoot andebug that later. Will now shift focus on to displaying the items

--- a/styles/ main.css
+++ b/styles/ main.css
@@ -2,11 +2,13 @@
 
 
 body{
-    background-color: whitesmoke;
+    background-color: rgb(0,123,167);
     text-align: center;
-    color: white;
+    color: black;
     font-family: Verdana, sans-serif;
     font-size: 20px;
+    margin: 0 auto;
+    padding: 0 auto;
     
                                                 
   
@@ -14,7 +16,7 @@ body{
 }
 
 .battleground{
-  background-color:green;
+  background-color:#808080;
   background-image: url('/battleBackgrounds/castle.png');
   background-size: cover;
   background-position: 50% 50%;
@@ -55,8 +57,9 @@ bottom: 30vh;
 }
 
 .pic{
-  width: 200px;
-  height: 200px;
+float: left;
+display: inline;
+ padding: 15px 100px;
 }
 
 
